--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,5 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
 
 # Logging configuration
-logging.level.com.rgonzalez.notifications=INFO
+logging.level.rgonzalez.notification=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
